tests/neg/wildcard-type-syntax-future.scala
import scala.language.future

def test =
  Seq() match
    case _: List[_] => // error
    case _: Seq[?] =>
